--- a/src/gui/Original Files/mainwindow (copy 1).ui
+++ b/src/gui/Original Files/mainwindow (copy 1).ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>337</width>
-    <height>710</height>
+    <width>344</width>
+    <height>574</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,11 +20,11 @@
       <x>10</x>
       <y>10</y>
       <width>321</width>
-      <height>681</height>
+      <height>541</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="main_tab">
      <attribute name="title">
@@ -565,7 +565,7 @@
         <x>10</x>
         <y>290</y>
         <width>301</width>
-        <height>261</height>
+        <height>121</height>
        </rect>
       </property>
       <property name="title">
@@ -584,7 +584,7 @@
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>Manual File Name:</string>
+           <string>File Name:</string>
           </property>
          </widget>
         </item>
@@ -601,7 +601,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>210</y>
+         <y>70</y>
          <width>281</width>
          <height>41</height>
         </rect>
@@ -667,81 +667,12 @@ color:rgb(255, 0, 0);
         </item>
        </layout>
       </widget>
-      <widget class="QLineEdit" name="subject_id">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>70</y>
-         <width>111</width>
-         <height>21</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_2">
-       <property name="geometry">
-        <rect>
-         <x>20</x>
-         <y>100</y>
-         <width>151</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Date (Format: MMDDYY):</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="datelabel">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>100</y>
-         <width>111</width>
-         <height>22</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_3">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>70</y>
-         <width>81</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Subject ID:</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="timelabel">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>130</y>
-         <width>111</width>
-         <height>22</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_4">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>130</y>
-         <width>141</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Time (Format: HHMM):</string>
-       </property>
-      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_5">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>560</y>
+        <y>420</y>
         <width>301</width>
         <height>81</height>
        </rect>
